@@ -1,6 +1,7 @@
 CGateInterface 0.2 (released TBC)
 
-* 
+* Change API's to rebuild cache rather than always retrieve from the cache.
+* Fix NullPointerException when C-Gate connection not established correctly.
 
 CGateInterface 0.1 (released 9/12/08)
 
